--- a/19_Java/08-JEE/Exercices/exercice6/pom.xml
+++ b/19_Java/08-JEE/Exercices/exercice6/pom.xml
@@ -50,9 +50,19 @@
           <artifactId>mysql-connector-java</artifactId>
           <version>8.0.33</version>
       </dependency>
+      <dependency>
+          <groupId>io.github.cdimascio</groupId>
+          <artifactId>java-dotenv</artifactId>
+          <version>5.2.2</version>
+      </dependency>
   </dependencies>
 
   <build>
+      <resources>
+          <resource>
+              <directory>src/main/resources</directory>
+          </resource>
+      </resources>
     <plugins>
 <plugin>
         <groupId>org.apache.maven.plugins</groupId>
