--- a/19_Java/10_Spring_API/exercices/02_exercice_cinematheque/pom.xml
+++ b/19_Java/10_Spring_API/exercices/02_exercice_cinematheque/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demoSpring</artifactId>
+	<artifactId>exercice_cinematheque_02</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demoSpring</name>
-	<description>demoSpring</description>
+	<name>02_exercice_cinematheque</name>
+	<description>02_exercice_cinematheque</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -36,6 +36,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -54,10 +58,6 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
