--- a/19_Java/10_Spring_API/exercices/02_exercice_cinematheque/src/main/resources/application.properties
+++ b/19_Java/10_Spring_API/exercices/02_exercice_cinematheque/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=02_exercice_cinematheque
+spring.datasource.url=jdbc:mysql://localhost/exercice_spring_api
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=root
