--- a/20_Docker/Exercice/exercice11_docker_compose/back_employee/src/main/resources/application.properties
+++ b/20_Docker/Exercice/exercice11_docker_compose/back_employee/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=back_employee
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
+#spring.datasource.url=${URL_DATABASE}
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
