--- a/20_Docker/Exercice/exercice11_docker_compose/docker-compose.yml
+++ b/20_Docker/Exercice/exercice11_docker_compose/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - "3305:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABSE: employee?createDatabaseIfNotExist=true
+      MYSQL_DATABSE: employee
+      #MYSQL_DATABSE: employee?createDatabaseIfNotExist=true
       MYSQL_USER: user
       MYSQL_PASSWORD: user
     volumes:
