--- a/20_Docker/Exercice/exercice11_docker_compose/docker-compose.yml
+++ b/20_Docker/Exercice/exercice11_docker_compose/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       dockerfile: dockerfile
     environment:
       - spring.datasource.url=jdbc:mysql://local_mysql/employee
+      #SPRING_DATASOURCE_URL: jdbc:mysql://local_mysql/employee
       - spring.datasource.username=root
       - spring.datasource.password=root
       - spring.jpa.hibernate.ddl-auto=update
